cmake_minimum_required(VERSION 3.22)
project(_EDD_Proyecto1_3156907980901)

set(CMAKE_CXX_STANDARD 23)

add_executable(_EDD_Proyecto1_3156907980901 main.cpp
        includes/MatrizDispersa/Nodo.h
        src/MatrizDispersa/Nodo.cpp
        includes/MatrizDispersa/MatrizDispersa.h
        src/MatrizDispersa/MatrizDispersa.cpp)
